[gd_scene load_steps=25 format=3 uid="uid://drb58nxmshj8k"]

[ext_resource type="Script" path="res://scenes/characters/enemies/follow_enemy.gd" id="1_ixdwh"]
[ext_resource type="PackedScene" uid="uid://dn6dkghyx5fp" path="res://scenes/effects/smoke_generator.tscn" id="2_q3brg"]
[ext_resource type="Shader" path="res://scenes/characters/player/hit.gdshader" id="3_6kpwm"]
[ext_resource type="Texture2D" uid="uid://b23hbpbijrk1r" path="res://sprites/enemy_buzz_chase.png" id="4_flxbh"]
[ext_resource type="Script" path="res://scenes/characters/enemies/follow_navigation.gd" id="5_48qvd"]
[ext_resource type="Texture2D" uid="uid://b36b4hva1v7lt" path="res://sprites/enemy_buzz_chase_resting.png" id="5_t3uc0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c8lxd"]
resource_local_to_scene = true
shader = ExtResource("3_6kpwm")
shader_parameter/active = false

[sub_resource type="AtlasTexture" id="AtlasTexture_thfq6"]
atlas = ExtResource("4_flxbh")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_sytqy"]
atlas = ExtResource("4_flxbh")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7qm5"]
atlas = ExtResource("5_t3uc0")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbrjo"]
atlas = ExtResource("5_t3uc0")
region = Rect2(24, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_8l0nw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_thfq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sytqy")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7qm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbrjo")
}],
"loop": true,
"name": &"resting",
"speed": 1.0
}]

[sub_resource type="Animation" id="Animation_axo3h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_qpf7y"]
resource_name = "hover"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 4), Vector2(0, 0), Vector2(0, -4)]
}

[sub_resource type="Animation" id="Animation_kkid7"]
resource_name = "resting"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.93333),
"transitions": PackedFloat32Array(0.574349, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 0.8), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h68e1"]
_data = {
"RESET": SubResource("Animation_axo3h"),
"hover": SubResource("Animation_qpf7y"),
"resting": SubResource("Animation_kkid7")
}

[sub_resource type="Animation" id="Animation_2swfp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_7qkde"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1.10957, 1),
"update": 0,
"values": [-0.261799, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"setShader"
}, {
"args": [false],
"method": &"setShader"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(0.267943, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 0.9), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uyx11"]
_data = {
"RESET": SubResource("Animation_2swfp"),
"hit": SubResource("Animation_7qkde")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mk2sf"]
size = Vector2(12, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_p2daj"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pcx7k"]
radius = 256.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tnhue"]
radius = 80.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ompnf"]
size = Vector2(20, 5)

[node name="FollowEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_ixdwh")
bounce_velocity = 300

[node name="SmokeGenerator" parent="." instance=ExtResource("2_q3brg")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_c8lxd")
sprite_frames = SubResource("SpriteFrames_8l0nw")
autoplay = "default"
frame_progress = 0.483473

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_h68e1")
}
autoplay = "hover"

[node name="SpriteAnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_uyx11")
}
autoplay = "RESET"

[node name="BounceTimer" type="Timer" parent="."]
one_shot = true

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mk2sf")

[node name="HurtArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
shape = SubResource("CircleShape2D_p2daj")

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_pcx7k")

[node name="WakeArea" type="Area2D" parent="."]
visible = false
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="WakeArea"]
shape = SubResource("CircleShape2D_tnhue")

[node name="FollowNavigation" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
script = ExtResource("5_48qvd")

[node name="JumpHitBox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpHitBox"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_ompnf")

[node name="FollowTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="HurtArea" to="." method="_on_hurt_area_body_entered"]
[connection signal="body_exited" from="HurtArea" to="." method="_on_hurt_area_body_exited"]
[connection signal="body_entered" from="DetectionArea" to="FollowNavigation" method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="FollowNavigation" method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="WakeArea" to="." method="_on_wake_area_body_entered"]
[connection signal="body_shape_entered" from="JumpHitBox" to="." method="_on_jump_hit_box_body_shape_entered"]
